# aws-lambda-rust-example

./: .gitignore  Cargo.toml  Lambda.toml.example
