[package]
name = "lambda-rust-example"
version = "0.1.0"
authors = ["yytyd <toyoda_yuki@cyberagent.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
rusoto_dynamodb = "0.45.0"
rusoto_core = "0.45.0"
serde = "1.0.115"
async-std = "1.6.3"

[[bin]]
name = "bootstrap"